--- a/LBA_MCS.ipynb
+++ b/LBA_MCS.ipynb
@@ -2109,6 +2109,48 @@
     },
     {
       "metadata": {
+        "id": "FK2_Bgil7vZt",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# METADATA\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "_-lSSHPC6Mrl",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "###[ALDI: Invalidenstraße 59, 17:30, 11/06/2018]\n",
+        "![ALDI: Invalidenstraße 59, 17:30, 11/06/2018](https://raw.githubusercontent.com/GitWahome/LBA-CS146/master/AldiInvaliden.png)\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "###[REWE: Schonhauser Allee 36-39, 10:00, 11/8/2018]\n",
+        "![REWE: Schonhauser Allee 36-39, 10:00, 11/8/2018](https://raw.githubusercontent.com/GitWahome/LBA-CS146/master/Rewe.png)"
+      ]
+    },
+    {
+      "metadata": {
         "id": "Hsqm_6eb1L0u",
         "colab_type": "text"
       },
